change: set max width content to the website to center the pages and prevent stretching fix: some pages presented overflowing elements

--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -45,7 +45,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 20rem;
+  // padding: 0 20rem;
+  margin: 0 auto;
 }
 
 .address-container {
@@ -96,7 +97,8 @@
 }
 
 .message-container {
-  padding: 0 20rem;
+  margin: 0 auto;
+  // padding: 0 20rem;
 }
 
 .message-form-container {
