--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,98 @@ p {
   font-family: "Barlow", sans-serif !important;
 }
 
+// [class*="max-width-"] {
+//   margin-left: 0;
+//   margin-right: 0;
+// }
+
+// .max-width-- {
+//   max-width: 2560px;
+// }
+// .max-width-l {
+//   max-width: 1440px;
+// }
+// .max-width-m {
+//   max-width: 1200px;
+// }
+// .max-width-s {
+//   max-width: 768px;
+// }
+// .max-width-xs {
+//   max-width: 480px;
+// }
+
+
+
+
+
+@media screen and(min-width: 600px) {
+  .max-width-- {
+    max-width: 480px;
+  }
+}
+@media screen and(min-width: 800px) {
+  .max-width-- {
+    max-width: 768px;
+  }
+}
+@media screen and(min-width: 1260px) {
+  .max-width-- {
+    max-width: 1200px;
+  }
+}
+@media screen and(min-width: 1700px) {
+  .max-width-- {
+    max-width: 1440px;
+  }
+  // .banner-slideshow-container {
+  //   width: 100%;
+  //   margin: 0 auto;
+  //   display: block;
+  //   max-width: 1440px;
+  // }
+}
+// TESTING SIZE
+// @media screen and(min-width: 2800px) {
+//   .max-width-- {
+//     max-width: 1960px;
+//   }
+// }
+
+@media screen and (min-width: 3000px) {
+  .navbar-wrap .navbar-content,
+  .subscribe-division-wrap .container,
+  .footer-container-wrapper .footer-container,
+  .footer-container-wrapper .conditions-container
+  {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .big-division-content .solutions-icon.right {
+    padding-right: 0;
+  }
+  .big-division-content .solutions-icon.left {
+    padding-left: 0;
+  }
+}
+
+// GENERAL SELECTORS
+
+// .navbar-wrap .navbar-content,
+// .subscribe-division-wrap .container,
+// .footer-container-wrapper .footer-container,
+// .footer-container-wrapper .conditions-container
+// {
+//   padding-left: 10%;
+//   padding-right: 10%;
+// }
+// .big-division-content .solutions-icon.right {
+//   padding-right: 10%;
+// }
+// .big-division-content .solutions-icon.left {
+//   padding-left: 10%;
+// }
+
 // MAIN
 .main {
   max-width: 100%;
@@ -31,13 +123,21 @@ a:visited {
   color: inherit;
 }
 
-.navbar-container {
+.navbar-wrap {
+  display: flex;
+  align-items: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  position: relative;
+}
+
+.navbar-wrap .navbar-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 10% 0.5rem 10%;
-  position: relative;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .menu .menu--item {
@@ -71,17 +171,17 @@ a:visited {
   color: $black;
 }
 
-// .navbar-container .container--logo {
+// .navbar-wrap .container--logo {
 //   background: url("/assets/logo.png") no-repeat;
 //   background-size: 12rem;
 //   width: 12rem;
 //   height: 8rem;
 // }
-.navbar-container .container--logo {
+.navbar-wrap .navbar-content .container--logo {
   max-width: 12rem;
   transition: all 0.08s linear;
 }
-.navbar-container.scrolled {
+.navbar-wrap.scrolled {
   border-bottom: 1px solid #ededed;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
 
@@ -89,10 +189,10 @@ a:visited {
   // -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
-.navbar-container.scrolled .container--logo {
+.navbar-wrap.scrolled .container--logo {
   max-width: 8rem;
 }
-.navbar-container.scrolled .menu .menu--item {
+.navbar-wrap.scrolled .menu .menu--item {
   font-size: 1.3rem;
 }
 
@@ -219,6 +319,14 @@ a:visited {
 // }
 
 // BANNER
+
+.banner-slideshow-container {
+  margin: 0 auto; 
+  // max-width: 100%;
+  // display: inline-block;
+  // padding: 0 10%;
+}
+
 .banner_container {
   height: auto;
   position: relative;
@@ -292,11 +400,12 @@ a:visited {
   position: relative;
   z-index: 20;
   width: 100%;
-  padding: 90px 10%;
+  // padding: 90px 10%;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  margin: 0 auto;
 }
-// .big-division-content .big-division-text-container {
-//   width: 50%;
-// }
+
 .big-division-content .big-division-text-container {
   width: 75%;
 }
@@ -357,11 +466,16 @@ a:visited {
   justify-content: space-between;
 }
 
+.card-post-expand-container {
+  max-width: 650px !important;
+  width: 100%;
+}
+
 .card-post-expand-container,
 .page-card-post-expand-container {
   margin: 0 auto;
   position: relative;
-  width: 22%;
+  // width: 22%;
   height: 45rem;
   cursor: pointer;
 }
@@ -399,10 +513,11 @@ a:visited {
 
 // SUBSCRIBE
 
-.subscribe-division-container {
+.subscribe-division-wrap {
   margin-top: 0.2rem;
   width: 100%;
-  padding: 50px 10%;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background: linear-gradient(
     90deg,
     rgba(240, 86, 56, 1) 0%,
@@ -413,6 +528,10 @@ a:visited {
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
+}
+
+.subscribe-division-wrap .container {
+  width: 100%;
 }
 
 .subscribe-title-text {
@@ -480,8 +599,12 @@ a:visited {
 .footer-container-wrapper {
   margin-top: 0.2rem;
   width: 100%;
-  padding: 50px 10%;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-color: #f05638;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .footer-container {
@@ -586,37 +709,10 @@ a:visited {
   .banner_container {
     margin-top: 3rem;
   }
-  // .banner_container .banner--img {
-  //   background: url("/assets/banner3.png") no-repeat;
-  //   background-size: 1400px;
-  //   background-position: right;
-  //   width: 100%;
-  //   height: 60rem;
-  //   transition: all 0.1s ease-out;
-  // }
   .banner_container .banner--text {
     top: 5rem;
     width: 30%;
   }
-  // .banner_container {
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: center;
-  //   align-items: center;
-  //   padding: 3rem 5rem 0 5rem;
-  // }
-  // .banner_container .banner--img {
-  //   background: url("/assets/banner3.png") no-repeat;
-  //   background-size: 1200px;
-  //   background-position: center;
-  //   width: 100%;
-  //   height: 55rem;
-  //   margin-right: 0;
-  // }
-  // .banner_container .banner--text,
-  // .banner_container .banner--img {
-  //   border: 1px solid black;
-  // }
 }
 
 @media screen and (max-width: 1600px) {
@@ -634,27 +730,18 @@ a:visited {
     width: 1200px;
     text-align: center;
   }
-  // .banner_container .banner--img {
-  //   background: url("/assets/banner2.png") no-repeat;
-  //   background-size: 900px;
-  //   background-position: center;
-  //   width: 100%;
-  //   height: 55rem;
-  //   margin-right: 0;
-  //   transition: all 0.1s ease-out;
-  // }
 }
 
 @media screen and (max-width: 1260px) {
   .menu .menu--item,
-  .navbar-container.scrolled .menu .menu--item {
+  .navbar-wrap.scrolled .menu .menu--item {
     font-size: 1.2rem;
   }
-  .navbar-container .container--logo,
-  .navbar-container.scrolled .container--logo {
+  .navbar-wrap .navbar-content .container--logo,
+  .navbar-wrap.scrolled .container--logo {
     max-width: 9rem;
   }
-  .navbar-container {
+  .navbar-wrap {
     padding: 0.5rem 10% 0.5rem 10%;
   }
   .side-menu-container {
@@ -813,12 +900,12 @@ a:visited {
     width: 1rem;
   }
 
-  .navbar-container .container--logo,
-  .navbar-container.scrolled .container--logo {
+  .navbar-wrap .navbar-content .container--logo,
+  .navbar-wrap.scrolled .container--logo {
     max-width: 7rem;
   }
 
-  .navbar-container {
+  .navbar-wrap {
     padding: 0.5rem 10% 0.5rem 10%;
   }
   .side-menu-container .side-menu-list--item {
@@ -834,7 +921,7 @@ a:visited {
     max-width: 20rem;
   }
 
-  .subscribe-division-container,
+  .subscribe-division-wrap,
   .footer-container-wrapper {
     padding: 30px 10px !important;
   }
